fix wood grain cut off issue and long text scroll issue

--- a/assets/styles/blocks/_environment.scss
+++ b/assets/styles/blocks/_environment.scss
@@ -91,7 +91,7 @@
 
     @media (min-width: $bp-S) {
       height: calc(100% - 500px);
-      background-image: url("../../images/artwork.svg");
+      background-image: url("../../images/wood-grain.svg");
     }
 
     &::before {
