--- a/assets/styles/blocks/_multiple-info.scss
+++ b/assets/styles/blocks/_multiple-info.scss
@@ -5,7 +5,6 @@
   z-index: 2;
   position: relative;
   transition: $transition-gradient;
-  overflow: hidden;
 
   &.section-bg-pattern {
     .multiple-info__bg {
@@ -23,7 +22,7 @@
 
       @media (min-width: $bp-S) {
         height: calc(100% - 500px);
-        background-image: url("../../images/artwork.svg");
+        background-image: url("../../images/wood-grain.svg");
       }
 
       &::before {
@@ -95,7 +94,7 @@
     @media (min-width: $bp-L) {
       display: flex;
       justify-content: space-between;
-      align-items: center;
+      align-items: flex-start;
     }
 
     @media (min-width: $bp-4XL) {
@@ -108,6 +107,9 @@
       margin: 0 auto 40px;
       width: 100%;
       height: auto;
+      position: -webkit-sticky;
+      position: sticky;
+      top: 50px;
 
       @media (min-width: $bp-L) {
         flex-basis: 50%;
