--- a/assets/styles/blocks/_sponsors.scss
+++ b/assets/styles/blocks/_sponsors.scss
@@ -1,6 +1,5 @@
 .sponsors {
   background: $color-7;
-  padding: 100px 0 0;
   position: relative;
   overflow: hidden;
   transition: $transition-gradient;
@@ -33,7 +32,7 @@
 
     @media (min-width: $bp-S) {
       height: calc(100% - 100px);
-      background-image: url("../../images/artwork.svg");
+      background-image: none;
     }
 
     &::before {
